[CLOUDTRUST-5584] Upgrade Keycloak to 26